# ATtinyWorld

./: .gitignore  README.md
examples/Charge Pump/: Charge Pump.sch
examples/Current Sense/: Current Sense.sch  README.md
examples/Dual Slope ADC/: CMakeLists.txt  Dual Slope ADC.sch  demo_2slope.c
examples/Ideal Diode/: Almost ideal diode.sch  README.md
examples/PWM ADC/: CMakeLists.txt  PWM ADC.sch  demo_adc.c
examples/Step-up Converter/: README.md  Step-up Converter.sch
examples/USART RS232/: CMakeLists.txt  README.md  demo_rs232.c  demo_usart.c  flash.sh  make.sh
lib/: DUAL_SLOPE_ADC.c  DUAL_SLOPE_ADC.h  PWM_ADC.c  PWM_ADC.h  USART_RS232_RX_BUF.c  USART_RS232_RX_BUF.h  USART_RS232_TX_BUF.c  USART_RS232_TX_BUF.h  datalib.h
proj/: avr-target.cmake
proj/cmake example/: CMakeLists.txt  main.c
proj/pv-storinator/: .gitignore  README.md  storinator-status.py
proj/pv-storinator/firmware/: .gitignore  CMakeLists.txt  adc.c  adc.h  main.c  pins.h
proj/pv-storinator/pcb/: .gitignore  Custom_Symbols.kicad_sym  controlpcb.kicad_pcb  controlpcb.kicad_prl  controlpcb.kicad_pro  controlpcb.kicad_sch
proj/pv-storinator/pcb 2025-07-26/: gerber.7z
proj/pv-storinator/pcb/Custom_Footprints.pretty/: SIP-6_Upright_Board.kicad_mod  SIP-7_Upright_Board.kicad_mod  SolderWire_D1.3mm_OD2.6mm.kicad_mod  TO-92_W.kicad_mod
